--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
     <!--
       This is the page head - it contains info the browser uses to display the page
@@ -52,7 +52,7 @@
         <h1 class="title">こんにちわ</h1>
 
         <img
-          src="https://cdn.glitch.com/a9975ea6-8949-4bab-addb-8a95021dc2da%2Fillustration.svg?v=1618177344016"
+          src="/assets/images/image.png"
           class="illustration"
           alt="Editor illustration"
           title="Click the image!"
