--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="wrapper">
       <div class="content" role="main">
         <!-- This is the start of content for our page -->
-        <h1 class="title">こんにちわ</h1>
+        <h1 class="title">元気最強</h1>
 
         <img
           src="assets/images/image.png"
